--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="source.js"></script>
+    <script type="module" src="engine.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
